@@ -2,6 +2,7 @@ Nginxbrew changes
 
 Nginxbrew 0.0.6
  - You can change ngx-user/group by config file which specified in env {NGINXBREW_CONFIG}.
+ - Add/update build options by hash in ruby.
 
 
 Nginxbrew 0.0.5
